`fix` bg too dark

--- a/styles/readme.css
+++ b/styles/readme.css
@@ -30,9 +30,6 @@ html {
 }
 
 body {
-  background-color: rgba(33,
-      37,
-      43, 0.6);
   color: #89EDA4;
   display: flex;
   margin: 0;
